@@ -3,6 +3,7 @@
 
     <item android:id="@android:id/background">
         <shape>
+            <corners android:radius="@dimen/progress_bar_radius"/>
             <gradient
                 android:endColor="@color/grey"
                 android:startColor="@color/grey" />
@@ -11,6 +12,7 @@
     <item android:id="@android:id/progress">
         <clip>
             <shape>
+                <corners android:radius="@dimen/progress_bar_radius"/>
                 <gradient
                     android:endColor="@color/app_theme_light"
                     android:startColor="@color/app_theme_dark" />
