@@ -2,19 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/padding_small">
+    android:padding="@dimen/padding_small" >
 
     <LinearLayout
         android:id="@+id/messageInfo"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/messageCountAtGlanceText"
+            style="@style/HighlightedTextArea"
             android:layout_width="match_parent"
-	        style="@style/HighlightedTextArea"
             android:layout_height="wrap_content"
             android:text="@string/empty_text"
             tools:context=".MainActivity" />
@@ -46,14 +46,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <LinearLayout
             android:id="@android:id/empty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="2dip"
+            android:orientation="vertical"
             android:gravity="center_vertical"
-            android:text="@string/empty_list" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ProgressBar
+                android:id="@+id/loadingProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="@dimen/padding_medium" />
+
+            <TextView
+                android:id="@+id/emptyListText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="2dip"
+                android:textSize="14sp"
+                android:gravity="center_vertical"
+                android:text="@string/empty_list" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
