@@ -1,3 +1,19 @@
+/*
+ * Copyright 2014 Midhun Harikumar
+ * 
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * 
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package com.ae.apps.messagecounter.utils;
 
 import android.content.Context;
@@ -6,15 +22,21 @@ import android.util.AttributeSet;
 import android.view.View;
 import android.widget.NumberPicker;
 
+/**
+ * A number picker preference used in the preferences page
+ * 
+ * @author Midhun
+ * 
+ */
 public class NumberPickerPreference extends DialogPreference {
 
-	NumberPicker numberPicker;
-	Integer initialValue;
-	
+	NumberPicker	numberPicker;
+	Integer			initialValue;
+
 	public NumberPickerPreference(Context context, AttributeSet attrs) {
 		super(context, attrs);
 	}
-	
+
 	@Override
 	protected void onBindDialogView(View view) {
 		super.onBindDialogView(view);
